# VC_2

./: CMakeLists.txt  README.md
common/: Filters.cpp  Filters.hpp  Object.cpp  Object.hpp  PixelationShader.cpp  PixelationShader.hpp  Transformation.cpp  Transformation.hpp
src/: pixelation.frag  sinCity.frag  videoTextureShader.frag  webcamQuad.cpp
